force-app/main/default/objects/LiveChatTranscript/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Email of the Chat User</description>
    <inlineHelpText>Email of the Chat User</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>