force-app/main/default/objects/LiveChatTranscript/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <description>First Name of the Chat User</description>
    <inlineHelpText>First Name of the Chat User</inlineHelpText>
    <label>First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>