force-app/main/default/objects/LiveChatTranscript/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <description>Last Name of the Chat User</description>
    <inlineHelpText>Last Name of the Chat User</inlineHelpText>
    <label>Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>